<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">Alien Demo</string>
    <string name="cancel">Cancel</string>
    <string name="cant_read_folder">"folder can't be read!"</string>
    <string name="create">Save</string>
    <string name="err">Error</string>
    <string name="file_name">File name:</string>
    <string name="location">Location</string>
    <string name="nnew">New</string>
    <string name="no_data">No Data</string>
    <string name="select">Select</string>
    <string name="title_activity_file_dialog">Select File</string>
    <string name="access_password">APwd</string>
    <string name="all_tags">&lt;all tags></string>
    <string name="ask_delete_asset">Delete asset?</string>
    <string name="ask_process_lock">Process with lock operation</string>
    <string name="ask_process_unlock">Process with unlock operation</string>
    <string name="asset_edit_btn_cancel">Cancel</string>
    <string name="asset_edit_btn_save">Save</string>
    <string name="asset_edit_note">Use Scan button to scan EPC, Barcode or load a Picture (tap-and-hold the Picture field for additional options).</string>
    <string name="assets_btn_add">Add</string>
    <string name="assets_btn_delete">Delete</string>
    <string name="barcode">Barcode</string>
    <string name="bit_len">Bit Len</string>
    <string name="bit_offset">Bit Offset</string>
    <string name="bit_ptr">Bit Ptr</string>
    <string name="btn_barcode">Barcode</string>
    <string name="btn_geiger">Geiger</string>
    <string name="btn_inventory">Inventory</string>
    <string name="btn_settings">RFID Settings</string>
    <string name="btn_start_scan">Scan</string>
    <string name="btn_stop_scan">Stop</string>
    <string name="btn_tagacces">Tag Access</string>
    <string name="clear">Clear</string>
    <string name="custom">Custom</string>
    <string name="debug_mode">Debug mode</string>
    <string name="epc">EPC</string>
    <string name="epc_starts_with">EPC Starts With</string>
    <string name="geiger_btn_mask">Mask</string>
    <string name="geiger_btn_start_search">Start Search</string>
    <string name="geiger_btn_stop_search">Stop Search</string>
    <string name="geiger_mask_all_tags">&lt;all tags></string>
    <string name="geiger_mask_btn_clear">Clear</string>
    <string name="geiger_mask_btn_load">Load</string>
    <string name="geiger_mask_btn_set">Set</string>
    <string name="geiger_mask_btn_start_scan">Scan</string>
    <string name="geiger_mask_btn_stop_scan">Stop</string>
    <string name="geiger_mask_count">Count   </string>
    <string name="geiger_mask_epc">Epc</string>
    <string name="geiger_mask_rssi">Rssi</string>
    <string name="geiger_mask_tab_assets_title">Assets</string>
    <string name="geiger_mask_tab_preset_title">Presets</string>
    <string name="geiger_mask_tab_scan_title">Scan</string>
    <string name="geiger_mask_tab_specify_title">Custom</string>
    <string name="geiger_msg_install_file_manager">Please install a File Manager</string>
    <string name="geiger_msg_select_preset_file">Select a preset file</string>
    <string name="geiger_txt_rssi">RSSI:</string>
    <string name="invalid_file">Invalid file</string>
    <string name="inventory_error_save_to_file">Error saving tag list to</string>
    <string name="inventory_saved_to_file">Tag list is saved to file</string>
    <string name="kill_password">KPwd</string>
    <string name="length">Length</string>
    <string name="lock">Lock</string>
    <string name="mask">Mask</string>
    <string name="mem_fields">Memory Fields</string>
    <string name="no">No</string>
    <string name="offset">Offset</string>
    <string name="ok">OK</string>
    <string name="password">Pwd</string>
    <string name="photo">Picture</string>
    <string name="preset_format">Format: Bank, BitPtr, BitLen, Data [, Name]</string>
    <string name="read">Read</string>
    <string name="read_all">Read All</string>
    <string name="reads">Reads:</string>
    <string name="remove_photo">Clear Picture</string>
    <string name="reset">Reset</string>
    <string name="rfid_access_pw">APwd</string>
    <string name="rfid_bank">Bank</string>
    <string name="rfid_field">Field</string>
    <string name="rfid_kill_pw">KPwd</string>
    <string name="rfid_power">Power</string>
    <string name="rfid_q">Q</string>
    <string name="rfid_session">Session</string>
    <string name="rfid_target">Target</string>
    <string name="rfid_tid">TID</string>
    <string name="rfid_user">User</string>
    <string name="save">Save</string>
    <string name="select_photo">Load Picture</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tag_access_advanced_tab_title">Advanced</string>
    <string name="tag_access_basic_tab_title">Basic</string>
    <string name="tags">Tags:</string>
    <string name="title_activity_asset_editor">Asset</string>
    <string name="title_activity_barcode">Barcode</string>
    <string name="title_activity_epc_mask">EPC Mask</string>
    <string name="title_activity_geiger">Geiger</string>
    <string name="title_activity_home">Alien Demo</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_mask">Mask</string>
    <string name="title_activity_settings">RFID Settings</string>
    <string name="title_activity_tag_access">Tag Access</string>
    <string name="unlock">Unlock</string>
    <string name="word_count">Word Count</string>
    <string name="word_ptr">Word Pointer</string>
    <string name="write">Write</string>
    <string name="yes">Yes</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="define_processbutton">processbutton</string>
    <string name="library_processbutton_author">Dmytro Danylyk</string>
    <string name="library_processbutton_authorWebsite">http://dmytrodanylyk.com/</string>
    <string name="library_processbutton_isOpenSource">true</string>
    <string name="library_processbutton_libraryDescription">Android Buttons With Built-in Progress Meters.</string>
    <string name="library_processbutton_libraryName">Process Button</string>
    <string name="library_processbutton_libraryVersion">1.0.1</string>
    <string name="library_processbutton_libraryWebsite">http://dmytrodanylyk.com/pages/portfolio/portfolio-process-button.html</string>
    <string name="library_processbutton_licenseId">mit</string>
    <string name="library_processbutton_repositoryLink">https://github.com/dmytrodanylyk/android-process-button</string>
</resources>
