<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/mask_scan_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.dd.processbutton.iml.ActionProcessButton android:id="@id/mask_btnScan" android:background="#ff51dcbc" android:padding="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/geiger_mask_btn_start_scan" android:layout_alignParentLeft="true" android:onClick="onClickStartStopScan" custom:pb_colorPressed="@color/scan_pressed" custom:pb_colorNormal="@color/scan_normal" custom:pb_colorProgress="@color/scan_progress" />
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
                <com.dd.processbutton.iml.ActionProcessButton android:id="@id/scan_set_btn" android:padding="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/geiger_mask_btn_set" />
                <com.dd.processbutton.iml.ActionProcessButton android:id="@id/mask_btnClear" android:padding="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geiger_mask_btn_clear" android:onClick="onClickClear" />
            </LinearLayout>
        </RelativeLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/mask_epc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout" android:background="@color/grayslate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" android:weightSum="1.0" android:layout_below="@id/mask_scan_group" android:layout_alignParentLeft="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/mask_epc_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geiger_mask_epc" android:layout_weight="0.96" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/mask_count_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geiger_mask_count" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/mask_rssi_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geiger_mask_rssi" />
    </LinearLayout>
    <ListView android:id="@id/mask_epcList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:choiceMode="singleChoice" android:layout_below="@id/linearLayout" android:layout_centerHorizontal="true" />
</RelativeLayout>