<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/dummy" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="1.0dip" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
        <com.dd.processbutton.iml.ActionProcessButton android:layout_gravity="right" android:id="@id/asset_item_save_btn" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/save" android:onClick="onClickSave" />
        <com.dd.processbutton.iml.ActionProcessButton android:layout_gravity="right" android:id="@id/asset_item_cancel_btn" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/asset_edit_btn_cancel" android:onClick="onClickCancel" />
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_12" android:textStyle="italic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/half_padding" android:text="@string/asset_edit_note" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_padding">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/epc" />
                    <EditText android:typeface="monospace" android:id="@id/asset_edit_epc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:digits="0123456789ABCDEF" android:inputType="textCapCharacters|textMultiLine|textNoSuggestions" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_padding">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/barcode" />
                    <EditText android:typeface="monospace" android:layout_gravity="center_vertical" android:id="@id/asset_edit_barcode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textMultiLine|textNoSuggestions" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/photo" />
                    <ImageView android:id="@id/asset_photo" android:background="@drawable/asset_box" android:padding="@dimen/half_padding" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="210.0dip" android:layout_height="210.0dip" android:layout_marginLeft="@dimen/standard_padding" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>